# olas

./: Dockerfile  README.md  pyproject.toml  server.py
.github/workflows/: workflow.yml
deployment/: Makefile  prod.env  skaffold.yaml  staging.env
deployment/charts/: Chart.yaml  values.yaml
deployment/charts/templates/: deployment.yaml  regcred.yaml
