[tool.poetry]
name = "olas"
version = "0.1.0"
description = "Server providing market statistics on OLAS"
authors = ["David Minarsch <david.minarsch@googlemail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
flask-caching = "^2.0.2"
web3 = "^6.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
