[tool.poetry]
name = "olas"
version = "0.1.0"
description = "Server providing market statistics on OLAS"
authors = ["David Minarsch <david.minarsch@googlemail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
flask-caching = "^2.0.2"
web3 = "^6.8.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.6.1"
pylint = "^3.0.1"
flake8 = "^6.1.0"
waitress = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
